@@ -4,6 +4,7 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.9
 
 	- Documentation updates (STR #2904)
+	- The CUPS desktop menu item was broken (STR #2924)
 	- The PPD parser was too strict about missing keyword
 	  values in "relaxed" mode.
 	- The PostScript filter incorrectly mirrored landscape
